# Genie

./: .gitignore  Config.txt  Dockerfile  LICENSE  Main.py  OpenVenv.bat  README.md  README_Docker.md  README_Docker_CN.md  README_en.md  README_zh.md  demo.py  demo_docker_deploy.py  demo_server.py  pyproject.toml  requirements.txt
.github/workflows/: build_portable_package.yml  main.yml
Demo/: API Server 教程.py  如何 TTS 推理.py  如何开启命令行助手.py  如何转换模型.py
Docker/: README_Docker.md  README_Docker_CN.md  demo_docker_deploy.py  docker-compose.yml
Docs/: GENIE TMP.txt  Hubert-Export.py
Genie_CPU/: Client.py  Main.py  ModelManager.py  __init__.py
Genie_CPU/Core/: Inference.py  TTSPlayer.py
Genie_CPU/Japanese/: JapaneseG2P.py  SymbolsV2.py
Genie_CPU/Utils/: Constants.py  Shared.py  UserData.py
Tutorial/: API.py
Tutorial/English/: API Server Tutorial.py  How to Convert Models.py  How to Do TTS Inference.py  How to Launch CMD Assistant.py
genie-cpu/Audio/: Audio.py
genie-cpu/Utils/: Constants.py  UserData.py  Utils.py
genie_cpu/: __init__.py
genie_cpu/Audio/: ReferenceAudio.py
genie_cpu/Core/: Inference.py  TTSPlayer.py
genie_cpu/Japanese/: JapaneseG2P.py
genie_cpu/Utils/: Constants.py  Shared.py
portable/windows/: start_fastapi.bat  start_fastapi.py
src/: ModelManager.py
src/Audio/: Audio.py  ReferenceAudio.py
src/Converter/: load_state_dict.py
src/Core/: TTSPlayer.py
src/Deprecated/: API.py  CUDA.py  ConvertFP32.py  Inference_Final.py  InputManager.py  JapaneseToPhones.py  OutputManager.py
src/Japanese/: JapaneseG2P.py
(+28 files in other folders)
